Oct 02 2002  2.7    Implemented more secure suid-behavior from reports by
                     Francois.
                    Updated configures suid args and documentation
                    Updated docs
Sep 29 2002  2.7    Beginnings of multi-server per client support.
                    Fixed packet tracking bug with adhoc networks
                    Updated manuf database and tweaked lucent pair
Sep 26 2002  2.7    Started 2.7 devel tree

Sep 26 2002  2.6.0  Released 2.6.0
                    Massive optomizations and speed boosts to the core of
                     Kismet.
                    Netstumbler detection
                    Deauthentication flood detection
                    Better OpenBSD support
                    ACPI battery monitoring
                    Lucent Outdoor Router/Karlnet/Turbocell detection
                    GPSMap command line and drawing revamp, alternate map 
                     source support.
                    Customizable speech output
                    Support for bigendian hardware
                    Forced priveledge drop to specified non-root user
                    Tracking of individual clients within each network
                    Detailed manufacturer fingerprinting from unbolted.net

Sep 26 2002  2.5.2  Consolidated kismet versioning into the makefile
                    Fixed ipk generation (for real this time.  ipk's now show
                     up even in qtopia's ipk manager.)
                    More revisions to packet dissection to eliminate some 
                     compiler stupidity with bitfields.
                    Fixed double-counting of probe packets
                    Fixed stupid error in manuf matching that prevented model
                     matches
                    Fixed counting of probe packets as data packets
                    Changed manuf datafile paths to assume default etc dir
                     if an absolute path isn't given