@@ -2,6 +2,8 @@ Oct 02 2002  2.7    Implemented more secure suid-behavior from reports by
                      Francois.
                     Updated configures suid args and documentation
                     Updated docs
+                    Fixed gpsmap requiring tracks be turned on to correctly
+                     draw interpolated power
 Sep 29 2002  2.7    Beginnings of multi-server per client support.
                     Fixed packet tracking bug with adhoc networks
                     Updated manuf database and tweaked lucent pair
